= Changelog

== v2023.4.0 (unreleased)

=== Architectural decision records

=== Breaking changes

=== Dependency update

=== Bug fixes

- https://github.com/eclipse-sirius/sirius-components/issues/1674[#1674] [diagram] The fade and hide tools were available on the background of the diagram

=== New Features

- https://github.com/eclipse-sirius/sirius-components/issues/1695[#1695] [view] Add a precondition expression to the node description

=== Improvements


== v2023.3.0

=== Architectural decision records

- [ADR-085] Add support for project templates
- [ADR-086] Add support of edges as targets of single click tools
- [ADR-087] Provide the variables available to each operation
- [ADR-088] Align the lifecycle of views on the lifecycle of domains
- [ADR-089] Add a URL based kind to representation description
- [ADR-090] Improve support for compartments
- [ADR-091] Add support of the compartment expand/collapse
- [ADR-092] Add support for diagram nodes labels' auto-wrap
- [ADR-093] Improve node size control

=== Breaking changes

- [core] Records are now used as the implementations of `IInput`
- https://github.com/eclipse-sirius/sirius-components/issues/1574[#1574] [diagram] In `diagram.graphqls`, `SingleClickOnDiagramElementTool` member's `targetDescriptions` is now of new type `DiagramElementDescription` instead of `NodeDescription`.
- https://github.com/eclipse-sirius/sirius-components/issues/1614[#1614] [graphql] Add a SuccessPayload to replace most basic payloads
- https://github.com/eclipse-sirius/sirius-components/issues/1615[#1615] [diagram] `DiagramDescription.getTools()` has been removed.
It was not actually used, as tools have long been found in `DiagramDescription.getToolSections()` instead.
- https://github.com/eclipse-sirius/sirius-components/issues/1588[#1588] [project] Moved the action "New Model" and "Upload model" in a new tree toolbar